# asvappra

./: .getattributes  README.md  settings.gradle
app/: build.gradle
app/alexa/: build.gradle
app/alexa/src/main/: AndroidManifest.xml
app/alexa/src/main/cpp/: CMakeLists.txt
app/alexa/src/main/cpp/acl/: AVSConnectionManager.cpp  AVSConnectionManager.h
app/alexa/src/main/cpp/acsdk_alerts/: Alarm.cpp  Alarm.h  AlarmAlertTest.cpp  Alert.cpp  Alert.h  AlertScheduler.cpp  AlertScheduler.h  AlertSchedulerTest.cpp  AlertTest.cpp  AlertsCapabilityAgent.cpp  AlertsCapabilityAgent.h  AlertsCapabilityAgentTest.cpp  Reminder.cpp  Reminder.h  ReminderAlertTest.cpp  RendererTest.cpp  Timer.cpp  Timer.h  TimerAlertTest.cpp
app/alexa/src/main/cpp/acsdk_alerts_interfaces/: AlertObserverInterface.cpp  AlertObserverInterface.h  AudioPlayerInterface.h  NotificationRendererInterface.h  NotificationRendererObserverInterface.h  (+2 more)
app/neuralnetworks/src/main/: AndroidManifest.xml
app/neuralnetworks/src/main/cpp/: CMakeLists.txt  ShowMessageError.cpp  ShowMessageError.h  functionsData.cpp  functionsData.h  globalData.cpp  globalData.h  neuralnetworks.cpp  neuralnetworks.h
app/opencl/src/main/: AndroidManifest.xml
app/opencl/src/main/cpp/: CMakeLists.txt  ClassToString.cpp  ClassToString.h  DataOpenCL.cpp  DataOpenCL.h  FunctionsOpenCL.cpp  FunctionsOpenCL.h  opencl.cpp  opencl.h
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+2976 files in other folders)
